# zero2prod

./: Cargo.toml  Dockerfile  spec.yaml
.github/workflows/: general.yml  rust.yml
configuration/: base.yml
digital_ocean/: Dockerfile
migrations/: 20210726204152_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  domain.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
