[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Olie Chan <olie.chan.141@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path="src/lib.rs"

[[bin]]
path="src/main.rs"
name="zero2prod"

[dependencies]
actix-web = "4.0.0-beta.8"
config = "0.11.0"
# We need the optional`derive`feature to use`serde`'s procedural macros:#`#[derive(Serialize)]`and`#[derive(Deserialize)]`.# The feature is not enabled by default to avoid pulling in# unnecessary dependencies for projects that do not need it.
serde = { version = "1", features = ["derive"]}
uuid = { version = "0.8.1", features = ["v4"] }
chrono = "0.4.15"
env_logger = "0.9.0"
log = "0.4.14"

# Using table-like toml syntax to avoid a super-long line!
[dependencies.sqlx]
version = "0.5.5"
default-features = false
features = [
  "runtime-actix-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate"
]

[dev-dependencies]
actix-rt = "2"
reqwest = "0.11"
tokio = "1"
